--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
+implicit==0.7.2
+pandas==2.0.3
+numpy==1.24.4
+openpyxl==3.1.2
